--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,30 +1,25 @@
 ---
-import Logo from '../components/Logo.astro';
-
 const navItems = [
-    { linkText: 'Home', href: '/' },
-    { linkText: 'Revalidation', href: '/revalidation' },
-    { linkText: 'Image CDN', href: '/image-cdn' },
-    { linkText: 'Edge Function', href: '/edge' },
-    { linkText: 'Blobs', href: '/blobs' }
+    { linkText: 'Accueil', href: '/' },
+    { linkText: 'A propos', href: '/a-propos' },
+    { linkText: 'Projets', href: '/projets' },
+    { linkText: 'Contact', href: '/contact' }
 ];
+
+const brandName = 'Sabrina B';
+const brandTagline = 'Portfolio BTS SIO SISR';
 ---
 
-<nav class="flex flex-wrap items-center gap-4 pt-6 pb-16 sm:pt-12 sm:pb-24">
-    <a href="/">
-        <Logo />
-    </a>
+<header class="site-header">
+    <a href="/" class="site-header__brand">{brandName}</a>
+    <div class="site-header__tagline">{brandTagline}</div>
     {
         !!navItems?.length && (
-            <ul class="flex flex-wrap gap-x-4 gap-y-1">
+            <nav class="site-header__nav">
                 {navItems.map((item) => (
-                    <li>
-                        <a href={item.href} class="inline-block px-1.5 py-1 sm:px-3 sm:py-2">
-                            {item.linkText}
-                        </a>
-                    </li>
+                    <a href={item.href}>{item.linkText}</a>
                 ))}
-            </ul>
+            </nav>
         )
     }
-</nav>
+</header>
